[gd_scene load_steps=15 format=3 uid="uid://6nfs2efistah"]

[ext_resource type="Script" uid="uid://d0g78xeuirvg1" path="res://script/main.gd" id="1_0ha60"]
[ext_resource type="Shader" uid="uid://cml4o12h8o652" path="res://assets/shader/circle_shader.gdshader" id="2_4j5ol"]
[ext_resource type="Texture2D" uid="uid://crwiilrsgr238" path="res://assets/texture/title.png" id="3_p1hux"]
[ext_resource type="Theme" uid="uid://cjlmk6m8bqip5" path="res://assets/game_theme.tres" id="4_of57s"]
[ext_resource type="AudioStream" uid="uid://j6hynm5oc4b8" path="res://assets/audio/start.mp3" id="5_b5f6u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xmel7"]
shader = ExtResource("2_4j5ol")
shader_parameter/radius = 0.5
shader_parameter/smoothness = 0.001

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nkfk5"]
shader = ExtResource("2_4j5ol")
shader_parameter/radius = 0.5
shader_parameter/smoothness = 0.001

[sub_resource type="AtlasTexture" id="AtlasTexture_2c8gs"]
atlas = ExtResource("3_p1hux")
region = Rect2(136, 24, 369, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q4wj"]
atlas = ExtResource("3_p1hux")
region = Rect2(176, 208, 280, 128)

[sub_resource type="Animation" id="Animation_gbpcu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartMenu/circle/small:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartMenu/circle/big:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartMenu/circle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StartMenu/BG:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StartMenu/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("StartMenu/Logo:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xmel7"]
resource_name = "hover"
loop_mode = 1
step = 0.0167
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartMenu/circle/big:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.983333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.5708, 1.5708, 4.71239]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartMenu/circle/small:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.983333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, -1.5708, -4.71239]
}

[sub_resource type="Animation" id="Animation_gj8r8"]
resource_name = "logo"
step = 0.0125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartMenu/Logo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.003),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartMenu/Logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pyxt3"]
resource_name = "start"
step = 0.0167
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartMenu/circle/big:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartMenu/circle/small:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, -3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartMenu/circle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StartMenu/BG:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StartMenu/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("StartMenu/Logo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("StartMenu/Logo:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhewb"]
_data = {
&"RESET": SubResource("Animation_gbpcu"),
&"idle": SubResource("Animation_xmel7"),
&"logo": SubResource("Animation_gj8r8"),
&"start": SubResource("Animation_pyxt3")
}

[node name="main" type="Node"]
script = ExtResource("1_0ha60")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Control" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(640, 640)
mouse_filter = 2

[node name="black" type="ColorRect" parent="StartMenu/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="white" type="ColorRect" parent="StartMenu/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="circle" type="Control" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="big" type="ColorRect" parent="StartMenu/circle"]
material = SubResource("ShaderMaterial_xmel7")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -360.0
offset_right = 360.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(360, 360)
mouse_filter = 2

[node name="small" type="ColorRect" parent="StartMenu/circle"]
material = SubResource("ShaderMaterial_nkfk5")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -122.0
offset_right = 122.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(122, 122)

[node name="GameTitle" type="Control" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ZN" type="TextureRect" parent="StartMenu/GameTitle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.5
offset_top = 20.0
offset_right = 184.5
offset_bottom = 140.0
grow_horizontal = 2
pivot_offset = Vector2(184, 60)
texture = SubResource("AtlasTexture_2c8gs")

[node name="Num" type="TextureRect" parent="StartMenu/GameTitle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -64.0
offset_right = 140.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(140, 64)
texture = SubResource("AtlasTexture_4q4wj")

[node name="StartButton" type="Button" parent="StartMenu/GameTitle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -153.0
offset_right = -18.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_of57s")
theme_type_variation = &"MyButton"
theme_override_font_sizes/font_size = 60
text = "Start"
alignment = 0

[node name="QuitButton" type="Button" parent="StartMenu/GameTitle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -153.0
offset_right = 196.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_of57s")
theme_type_variation = &"MyButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.366595, 0.366595, 0.366595, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Exit"
alignment = 0

[node name="Logo" type="ColorRect" parent="StartMenu"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="StartMenu/Logo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -79.5
offset_right = 180.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_of57s")
theme_type_variation = &"MyLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 180
text = "xusir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="StartMenu"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_bhewb")
}

[node name="StartMusicPlayer" type="AudioStreamPlayer" parent="StartMenu"]
stream = ExtResource("5_b5f6u")
parameters/looping = false

[connection signal="pressed" from="StartMenu/GameTitle/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/GameTitle/QuitButton" to="." method="_on_quit_button_pressed"]
